src/scss/loader.scss
@mixin medium {
  @media (min-width: 768px) {
    @content;
  }
};

@mixin large {
  @media (min-width: 1280px) {
    @content;
  }
};

.header{
font-family: 'Raleway';
transition: opacity 20s;
height: 100vh;
width: 100vw;
position: relative;
background-color: rgb(255, 255, 255);
};

.scrollTable {
  display: flex;
  width: 120px;
  height: 400px;
  margin: 15px;
  .scrollCircles{
    width: 100%;
    .scrollCircle {
      margin: 10px;
      width: 6px;
      height: 6px;
      border-radius: 45px;
      border: solid 1px black;
    }
  }
  .scrollProject {
    font-size: 12px;
    font-weight: bold;
    margin: 8px;
    display: none;
  }

}

.portfolio {
  position: absolute;
  right: 45px;
  top: 60px;
  width: 70px;
 img {
   width: 100%;
 }
};

.face__container {
  position: absolute;
  width: 300px;
  left: calc(50% - 150px);
  top: calc(34% - 186px);
  svg {
    width: 100%;
  }
};

.face__text{
  // transition: opacity 10s;
  // opacity: 0;
  position: absolute;
  text-align: left;
  width: 250px;
  left: calc(50% - 120px);
  top: 45%;
  justify-content: center;
  p {
    margin-bottom: 10px;
  font-family: 'Raleway-Bold';
  font-size: 28px;
  .job{
    font-family: 'Raleway-Semibold';
    font-size: 20px;
  }
  .presentation {
    font-family: 'Raleway-Light';
    font-size: 20px;
  }
  }
};

.cls-1 {
  stroke-dasharray: 2250;
  stroke-dashoffset: 2250;
  animation: draw 4.5s linear forwards;
}

@keyframes draw {
  to {
    stroke-dashoffset: 0;
  }
};

.header__scroll {
  margin-left: 30px;
  width: 10vw;
  bottom: 80px;
  display: none;
  img {
    width: 20px;
  }
  @include medium{
    display: block;
    position: absolute;
  }
};

